--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,23 +25,10 @@ jobs:
 
       - name: Create release
         run: |
+          echo "Need to update go-ci/release.yml to ensure that the release is defined in CHANGELOG.md but not yet tagged, then use the text in CHANGELOG as the text of the release instead of the commit log" && false
           git log --format="%C(auto) %H %s" `git tag --sort=-committerdate | head -1`...HEAD > changelog.txt
           echo ${{ secrets.GITHUB_TOKEN }} | gh auth login --with-token
           gh release create ${{ github.event.inputs.tag }} -t ${{ github.event.inputs.tag }} -F changelog.txt
-
-#       - name: Create release
-#         run: |
-#           git config --global user.email "oleg@hey.com"
-#           git config --global user.name "Oleg Kovalov"
-#           git tag -a ${{ github.event.inputs.tag }} -m ${{ github.event.inputs.tag }}
-
-#       - name: Run GoReleaser
-#         uses: goreleaser/goreleaser-action@0110a4acb73fda6a2c401b6d1cb70a11d5b0fadf # latest
-#         with:
-#           version: latest
-#           args: release --rm-dist
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Ping pkg.go.dev
         run: |
