add workflow_dispatch to all actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,7 @@ on:
         default: ''
         required: false
         type: string
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}${{ inputs.groupSuffix }}
