add permission to update coverage on wiki

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,7 @@
 name: build
 
-permissions: {} # no need any permissions
+permissions:
+  contents: write # for coverage updates on the wiki
 
 on:
   push:
