--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,9 @@ jobs:
 
       - name: Ping pkg.go.dev
         run: |
-          curl --show-error --fail -w "HTTP %{http_code}\n" -o - 'https://pkg.go.dev/fetch/${{ steps.vars.outputs.module }}@${{ steps.vars.outputs.tag }}' \
+          tag="$(cat release-tag.tmp) && \
+          mod="$(go list -m) && \
+          curl --show-error --fail -w "HTTP %{http_code}\n" -o - "https://pkg.go.dev/fetch/$mod@$tag" \
             --connect-timeout 5 \
             --max-time 10 \
             --retry 10 \
@@ -46,7 +48,6 @@ jobs:
             -H 'sec-fetch-site: same-origin' \
             -H 'sec-fetch-mode: cors' \
             -H 'sec-fetch-dest: empty' \
-            -H 'referer: https://pkg.go.dev/${{ steps.vars.outputs.module }}@${{ steps.vars.outputs.tag }}' \
+            -H "referer: https://pkg.go.dev/$mod@$tag" \
             -H 'accept-language: en,en-GB;q=0.9,en-US;q=0.8' \
-            --compressed \
-            || true # we don't care about success
+            --compressed
