--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,7 +14,7 @@ jobs:
   run:
     name: Lint
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 10
     strategy:
       fail-fast: true
 
@@ -28,8 +28,23 @@ jobs:
           go-version: 'stable'
           check-latest: true
 
+      - name: Goimports Check
+        uses: DarthBenro008/goimports-check-action@v0.1.0
+
+      - name: Go Format
+        run: gofmt -s -w . && git diff --exit-code
+
+      - name: Golangci-Lint
+        uses: golangci/golangci-lint-action@v7
+
+      - name: Go Tidy
+        run: go mod tidy && git diff --exit-code
+
       - name: Lint
         uses: golangci/golangci-lint-action@v5.0.0
         with:
           version: latest
           args: --timeout 5m
+
+      - name: Go Vet
+        run: go vet ./...
