--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,16 +1,31 @@
 name: test
 
-permissions: {} # no need any permissions
+permissions:
+  contents: write # for coverage updates on the wiki
 
 on:
   workflow_call:
+      buildTags:
+        description: 'Build tags to use. Default is "1" which works as no-op'
+        default: '1'
+        required: false
+        type: string
+      groupSuffix:
+        description: 'Concurrency group suffix to allow multiple jobs'
+        default: ''
+        required: false
+        type: string
   workflow_dispatch:
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}${{ inputs.groupSuffix }}
+  cancel-in-progress: true
 
 jobs:
   run:
     name: Test
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 30
     strategy:
       fail-fast: true
       matrix:
@@ -26,5 +41,14 @@ jobs:
           go-version: ${{ matrix.go }}
           check-latest: true
 
-      - name: Run tests
-        run: go test -v -count=1 -race -shuffle=on ./...
+      - name: Go Test
+        run: go test -v -shuffle=on -tags=${{ inputs.buildTags }} -race -count=1 -coverprofile=coverage.txt -coverpkg ./...
+
+      - name: Update coverage report
+        if: |
+          !inputs.skipTests &&
+          matrix.go == 'stable' &&
+          github.event_name == 'push'
+        uses: ncruces/go-coverage-report@v0
+        with:
+          amend: true
