regularized cronjobs and push/PR execution

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,12 +1,14 @@
 name: lint
 
-permissions: {} # no need any permissions
+permissions: {} # no need for any permissions
 
 on:
   push:
     branches: [main]
   pull_request:
     branches: [main]
+  schedule:
+  - cron: '0 14 * * 6' # run each Saturday at 2pm UTC
   workflow_call:
     inputs:
       jobTimeoutMinutes:
