--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,16 @@ on:
   - cron: '0 14 * * 6' # run each Saturday at 2pm UTC
   workflow_call:
     inputs:
+      groupSuffix:
+        description: 'Concurrency group suffix to allow multiple jobs'
+        default: ''
+        required: false
+        type: string
+      jobTimeoutMinutes:
+        description: 'Overall job timeout in minutes'
+        default: 5
+        required: false
+        type: number
       skipGenerate:
         description: 'Skip "go generate"'
         default: true
@@ -19,11 +29,6 @@ on:
       buildTags:
         description: 'Build tags to use. Default is "1" which works as no-op'
         default: '1'
-        required: false
-        type: string
-      groupSuffix:
-        description: 'Concurrency group suffix to allow multiple jobs'
-        default: ''
         required: false
         type: string
   workflow_dispatch:
@@ -36,7 +41,7 @@ jobs:
   run:
     name: Build
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: ${{ inputs.jobTimeoutMinutes }}
     strategy:
       fail-fast: true
       matrix:
