--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,19 +11,19 @@ on:
   - cron: '0 14 * * 6' # run each Saturday at 2pm UTC
   workflow_call:
     inputs:
+      groupSuffix:
+        description: 'Concurrency group suffix to allow multiple jobs'
+        default: ''
+        required: false
+        type: string
       jobTimeoutMinutes:
         description: 'Overall job timeout in minutes'
-        default: '10'
+        default: 10
         required: false
         type: number
       golangciLintTimeout:
         description: 'Value to pass to golangci-lint --timeout'
         default: '5m'
-        required: false
-        type: string
-      groupSuffix:
-        description: 'Concurrency group suffix to allow multiple jobs'
-        default: ''
         required: false
         type: string
   workflow_dispatch:
