--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,24 +12,24 @@ on:
   - cron: '0 14 * * 6' # run each Saturday at 2pm UTC
   workflow_call:
     inputs:
+      groupSuffix:
+        description: 'Concurrency group suffix to allow multiple jobs'
+        default: ''
+        required: false
+        type: string
+      jobTimeoutMinutes:
+        description: 'Overall job timeout in minutes'
+        default: 15
+        required: false
+        type: number
       buildTags:
         description: 'Build tags to use. Default is "1" which works as no-op'
         default: '1'
         required: false
         type: string
-      jobTimeoutMinutes:
-        description: 'Overall job timeout in minutes'
-        default: '15'
-        required: false
-        type: number
       testTimeout:
         description: 'Value to pass to go test -timeout'
         default: '10m'
-        required: false
-        type: string
-      groupSuffix:
-        description: 'Concurrency group suffix to allow multiple jobs'
-        default: ''
         required: false
         type: string
   workflow_dispatch:
