--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,6 @@ on:
         type: string
       jobTimeoutMinutes:
         description: 'Overall job timeout in minutes'
-        default: 5
         required: false
         type: number
       skipGenerate:
@@ -27,8 +26,7 @@ on:
         required: false
         type: boolean
       buildTags:
-        description: 'Build tags to use. Default is "1" which works as no-op'
-        default: '1'
+        description: 'Build tags to use.'
         required: false
         type: string
   workflow_dispatch:
@@ -41,7 +39,7 @@ jobs:
   run:
     name: Build
     runs-on: ubuntu-latest
-    timeout-minutes: ${{ inputs.jobTimeoutMinutes }}
+    timeout-minutes: ${{ fromJSON(inputs.jobTimeoutMinutes || 5) }}
     strategy:
       fail-fast: true
       matrix:
@@ -68,10 +66,10 @@ jobs:
         run: go generate ./... && git diff --exit-code
 
       - name: Go Build
-        run: go build -o=/dev/null -tags=${{ inputs.buildTags }} ./...
+        run: go build -o=/dev/null ${{ inputs.buildTags && '-tags='+inputs.buildTags || '' }} ./...
 
       - name: Go Compile Tests
-        run: go test -exec=/bin/true -tags=${{ inputs.buildTags }} ./...
+        run: go test -exec=/bin/true ${{ inputs.buildTags && '-tags='+inputs.buildTags || '' }} ./...
 
       - name: Go Benchmark
-        run: go test -v -shuffle=on -tags=${{ inputs.buildTags }} -run=^$ -bench=. -benchtime=1x ./...
+        run: go test -v -shuffle=on ${{ inputs.buildTags && '-tags='+inputs.buildTags || '' }} -run=^$ -bench=. -benchtime=1x ./...
