--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Go Test
         run: |
           go test -v -timeout=${{ inputs.testTimeout }} -shuffle=on \
-             ${{ inputs.buildTags && '-tags='+inputs.buildTags || '' }} \
+             ${{ inputs.buildTags && format('-tags={0}', inputs.buildTags) || '' }} \
              -cpu 1,2,4 -race -count=1 -coverprofile=coverage.txt -coverpkg ./...
 
       - name: Update coverage report
