--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,12 +14,10 @@ on:
     inputs:
       groupSuffix:
         description: 'Concurrency group suffix to allow multiple jobs'
-        default: ''
         required: false
         type: string
       jobTimeoutMinutes:
         description: 'Overall job timeout in minutes'
-        default: 15
         required: false
         type: number
       buildTags:
@@ -28,7 +26,6 @@ on:
         type: string
       testTimeout:
         description: 'Value to pass to go test -timeout'
-        default: '10m'
         required: false
         type: string
   workflow_dispatch:
@@ -59,7 +56,7 @@ jobs:
 
       - name: Go Test
         run: |
-          go test -v -timeout=${{ inputs.testTimeout }} -shuffle=on \
+          go test -v -timeout=${{ inputs.testTimeout || '10m' }} -shuffle=on \
              ${{ inputs.buildTags && format('-tags={0}', inputs.buildTags) || '' }} \
              -cpu 1,2,4 -race -count=1 -coverprofile=coverage.txt -coverpkg ./...
 
