--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -47,23 +47,19 @@ jobs:
           go-version: 'stable'
           check-latest: true
 
-      - name: Goimports Check
-        uses: DarthBenro008/goimports-check-action@v0.1.0
-
       - name: Go Format
         run: gofmt -s -w . && git diff --exit-code
 
-      - name: Golangci-Lint
-        uses: golangci/golangci-lint-action@v7
+      - name: Go Imports
+        run: goimports -w . && git diff --exit-code
 
       - name: Go Tidy
         run: go mod tidy && git diff --exit-code
 
-      - name: Lint
-        uses: golangci/golangci-lint-action@v5.0.0
-        with:
-          version: latest
-          args: --timeout ${{ inputs.golangciLintTimeout || '5m' }}
-
       - name: Go Vet
         run: go vet ./...
+
+      - name: Golangci-Lint
+        uses: golangci/golangci-lint-action@v7
+        with:
+          args: --timeout ${{ inputs.golangciLintTimeout || '5m' }}
