moved triggers to new check workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,29 +1,24 @@
-name: build
+name: Build
 
 permissions: {} # no need for any permissions
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
-  schedule:
-  - cron: '0 14 * * 6' # run each Saturday at 2pm UTC
   workflow_call:
     inputs:
       groupSuffix:
         description: 'Concurrency group suffix to allow multiple jobs'
+        default: ''
         required: false
         type: string
       jobTimeoutMinutes:
         description: 'Overall job timeout in minutes'
+        default: 5
         required: false
         type: number
       buildTags:
-        description: 'Build tags to use.'
+        description: 'Go build tags'
         required: false
         type: string
-  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}${{ inputs.groupSuffix }}
@@ -33,7 +28,7 @@ jobs:
   run:
     name: Build
     runs-on: ubuntu-latest
-    timeout-minutes: ${{ fromJSON(inputs.jobTimeoutMinutes || 5) }}
+    timeout-minutes: ${{ fromJSON(inputs.jobTimeoutMinutes) }}
     strategy:
       fail-fast: true
       matrix:
@@ -59,10 +54,10 @@ jobs:
         run: go generate ./... && git diff --exit-code
 
       - name: Go Build
-        run: go build -o=/dev/null ${{ inputs.buildTags && format('-tags={0}', inputs.buildTags) || '' }} ./...
+        run: go build -o=/dev/null ${{ inputs.buildTags && format("-tags='{0}'", inputs.buildTags) || '' }} ./...
 
       - name: Go Compile Tests
-        run: go test -exec=/bin/true ${{ inputs.buildTags && format('-tags={0}', inputs.buildTags) || '' }} ./...
+        run: go test -exec=/bin/true ${{ inputs.buildTags && format("-tags='{0}'", inputs.buildTags) || '' }} ./...
 
       - name: Go Benchmark
-        run: go test -v -shuffle=on ${{ inputs.buildTags && format('-tags={0}', inputs.buildTags) || '' }} -run=^$ -bench=. -benchtime=1x ./...
+        run: go test -v -shuffle=on ${{ inputs.buildTags && format("-tags='{0}'", inputs.buildTags) || '' }} -run=^$ -bench=. -benchtime=1x ./...
