fix tags quoting, take 2

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,10 +54,10 @@ jobs:
         run: go generate ./... && git diff --exit-code
 
       - name: Go Build
-        run: go build -o=/dev/null ${{ inputs.buildTags && format('-tags=''{0}''', inputs.buildTags) || '' }} ./...
+        run: go build -o=/dev/null ${{ inputs.buildTags && format('-tags=''{0}'' ', inputs.buildTags) || '' }} ./...
 
       - name: Go Compile Tests
-        run: go test -exec=/bin/true ${{ inputs.buildTags && format('-tags='{0}''', inputs.buildTags) || '' }} ./...
+        run: go test -exec=/bin/true ${{ inputs.buildTags && format('-tags=''{0}'' ', inputs.buildTags) || '' }} ./...
 
       - name: Go Benchmark
-        run: go test -v -shuffle=on ${{ inputs.buildTags && format('-tags='{0}''', inputs.buildTags) || '' }} -run=^$ -bench=. -benchtime=1x ./...
+        run: go test -v -shuffle=on ${{ inputs.buildTags && format('-tags=''{0}'' ', inputs.buildTags) || '' }} -run=^$ -bench=. -benchtime=1x ./...
