--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,7 @@ on:
     inputs:
       publishDocs:
         description: 'Publish docs to pkg.go.dev'
+        default: false
         required: false
         type: boolean
   workflow_dispatch:
